package main

import (
	"context"
	"flag"
	"fmt"
	"log"
	v1 "proto_definitions/product/v1"
	"time"

	//clientv3 "go.etcd.io/etcd/client/v3"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

var (
	serverAddr = flag.String("addr", "localhost:9001", "gRPC server address")
)

func main() {
	//cli, err := clientv3.New(clientv3.Config{
	//	Endpoints:   []string{"127.0.0.1:2379"},
	//	DialTimeout: 5 * time.Second,
	//})
	//if err != nil {
	//	panic(err)
	//}
	//defer cli.Close()
	//
	ctx, cancel := context.WithTimeout(context.Background(), 3*time.Second)
	//defer cancel()
	//
	//// Kratos é»˜è®¤å‰ç¼€æ˜¯ /microservices/
	//resp, err := cli.Get(ctx, "/microservices/", clientv3.WithPrefix())
	//if err != nil {
	//	panic(err)
	//}
	//
	//fmt.Println("ğŸ“¦ å·²æ³¨å†ŒæœåŠ¡åˆ—è¡¨:")
	//for _, kv := range resp.Kvs {
	//	fmt.Printf("%s = %s\n", kv.Key, kv.Value)
	//}

	// 1. è¿æ¥ gRPC æœåŠ¡ï¼ˆæ—  TLS åŠ å¯†ï¼Œç”Ÿäº§ç¯å¢ƒéœ€é…ç½® TLSï¼‰
	conn, err := grpc.Dial(*serverAddr,
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithBlock(), // ç­‰å¾…è¿æ¥æˆåŠŸ
	)
	if err != nil {
		log.Fatalf("æ— æ³•è¿æ¥æœåŠ¡ï¼š%v", err)
	}
	defer conn.Close()

	// 2. åˆ›å»ºå®¢æˆ·ç«¯å®ä¾‹
	client := v1.NewProductServiceClient(conn)
	ctx, cancel = context.WithTimeout(context.Background(), 3*time.Second)
	defer cancel()

	// 3. æ ¹æ®å‘½ä»¤æ‰§è¡Œå¯¹åº”æ“ä½œ
	//addProduct(ctx, client)
	getProductInfo(ctx, client)
	//deductStock(ctx, client)
	//editProductPrice(ctx, client)
}

// æ–°å¢å•†å“
func addProduct(ctx context.Context, client v1.ProductServiceClient) {
	req := &v1.AddProductRequest{
		Name:     "æµ‹è¯•å•†å“",
		Describe: "è¿™æ˜¯ä¸€ä¸ªç”¨äº gRPC å®¢æˆ·ç«¯æµ‹è¯•çš„å•†å“",
		Price:    99900,
		Stock:    100,
	}

	resp, err := client.AddProduct(ctx, req)
	if err != nil {
		log.Fatalf("æ–°å¢å•†å“å¤±è´¥ï¼š%v", err)
	}
	fmt.Printf("æ–°å¢å•†å“ç»“æœï¼š%v\n", resp.Success)
}

// æ‰£å‡åº“å­˜
func deductStock(ctx context.Context, client v1.ProductServiceClient) {
	req := &v1.DeductStockRequest{
		Id:  1,  // æ›¿æ¢ä¸ºå®é™…å•†å“ ID
		Num: 10, // æ‰£å‡æ•°é‡
	}

	resp, err := client.DeductStock(ctx, req)
	if err != nil {
		log.Fatalf("æ‰£å‡åº“å­˜å¤±è´¥ï¼š%v", err)
	}
	fmt.Printf("æ‰£å‡åº“å­˜ç»“æœï¼š%v\n", resp.Success)
}

// å¢åŠ åº“å­˜
func addStock(ctx context.Context, client v1.ProductServiceClient) {
	req := &v1.DeductStockRequest{ // å¤ç”¨ DeductStockRequest ç»“æ„ä½“ï¼ˆå­—æ®µä¸€è‡´ï¼‰
		Id:  1,  // æ›¿æ¢ä¸ºå®é™…å•†å“ ID
		Num: 20, // å¢åŠ æ•°é‡
	}

	resp, err := client.AddStock(ctx, req)
	if err != nil {
		log.Fatalf("å¢åŠ åº“å­˜å¤±è´¥ï¼š%v", err)
	}
	fmt.Printf("å¢åŠ åº“å­˜ç»“æœï¼š%v\n", resp.Success)
}

// æŸ¥è¯¢å•†å“ä¿¡æ¯
func getProductInfo(ctx context.Context, client v1.ProductServiceClient) {
	req := &v1.QueryRequest{
		Id: 1,
	}

	resp, err := client.GetProductInfo(ctx, req)
	if err != nil {
		log.Fatalf("æŸ¥è¯¢å•†å“å¤±è´¥ï¼š%v", err)
	}
	fmt.Printf("å•†å“ä¿¡æ¯ï¼š\n")
	fmt.Printf("ID: %d\n", resp.Id)
	fmt.Printf("åç§°: %s\n", resp.Name)
	fmt.Printf("æè¿°: %s\n", resp.Describe)
	fmt.Printf("ä»·æ ¼: %d\n", resp.Price)
	fmt.Printf("åº“å­˜: %d\n", resp.Stock)
}

// ä¿®æ”¹å•†å“ä»·æ ¼
func editProductPrice(ctx context.Context, client v1.ProductServiceClient) {
	req := &v1.EditRequest{
		Id:    1,   // æ›¿æ¢ä¸ºå®é™…å•†å“ ID
		Price: 888, // æ–°ä»·æ ¼
	}

	resp, err := client.EditProductPrice(ctx, req)
	if err != nil {
		log.Fatalf("ä¿®æ”¹ä»·æ ¼å¤±è´¥ï¼š%v", err)
	}
	fmt.Printf("ä¿®æ”¹ä»·æ ¼ç»“æœï¼š%v\n", resp.Success)

}
